Restructure /api/statistics/global/top/ endpoints for user filtering
